# DTVM

./: .gitignore
.kiro/specs/rust-evm-host-functions/: design.md  requirements.md  tasks.md
rust_crate/: COMPLETE_EVM_INTEGRATION_SUCCESS_REPORT.md  COMPLEX_TOKEN_SYSTEM_SUCCESS_REPORT.md  COUNTER_TEST_SUCCESS_REPORT.md  Cargo.toml  EVM_CALL_DATA_EXPLANATION.md  EVM_CAMELCASE_NAMING_SUCCESS_REPORT.md  EVM_CONTRACT_ARCHITECTURE_EXPLANATION.md  EVM_CORE_MODULE_ALIGNMENT_REPORT.md  EVM_FUNCTION_ALIGNMENT_REPORT.md  EVM_HOST_FUNCTIONS_INTEGRATION_REPORT.md  FINAL_EVM_INTEGRATION_REPORT.md  FINISH_FUNCTION_FIX_SUCCESS_REPORT.md  VERIFICATION_REPORT.md  WASM_FUNCTION_PARAMETERS_EXPLANATION.md  build.rs
rust_crate/benches/: evm_benchmarks.rs
rust_crate/evm_example/: Cargo.toml
rust_crate/evm_example/src/: contract_executor.rs  mock_context.rs
rust_crate/evm_example/tests/: advanced_host_test.rs  base_host_test.rs  contract_calls_test.rs  counter_test.rs  simple_token_test.rs
rust_crate/evm_example/tests/common/: calldata.rs  decode.rs  mod.rs
rust_crate/examples/: basic_usage.rs
rust_crate/rust_example/: Cargo.toml  compile_token_system.sh  minimal_token.wat  simple_token.wat  token_system.wat
rust_crate/rust_example/compiled_contracts/: SimpleToken.abi  TokenExchange.abi
rust_crate/rust_example/src/: evm_bridge.rs  evm_test_contract.wat  main_counter.rs  main_with_full_evm.rs  main_with_full_evm_new.rs  mainv0.rs  test_providers.rs  token_system.sol
rust_crate/src/: gas_meter.rs  lib.rs  utils.rs
rust_crate/tests/: integration_tests.rs
(+28 files in other folders)
