[package]
name = "evm_example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dtvmcore_rust = { path = "../" }
cty = "0.2.2"
libc = { version = "0.2.121" }
hex = "0.4"
log = { version = "0.4", optional = true }
env_logger = { version = "0.10" }
sha3 = "0.10"

[lib]
name = "evm_example"
path = "src/lib.rs"

[[bin]]
name = "main"
path = "src/main.rs"
