[package]
name = "rust_example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dtvmcore_rust = { path = "../" }
#dtvmcore_rust = { path = "../DTVM/rust_crate" }
cty = "0.2.2"
libc = { version = "0.2.121" }
hex = "0.4"
